[gd_scene load_steps=6 format=3 uid="uid://q7lqi1ajv8vq"]

[ext_resource type="PackedScene" uid="uid://bcdynouiuue7m" path="res://player.tscn" id="1_p6d36"]
[ext_resource type="Script" path="res://main.gd" id="1_qqd33"]
[ext_resource type="PackedScene" uid="uid://di6umhd3h3dcn" path="res://map.tscn" id="2_d4h1m"]
[ext_resource type="PackedScene" uid="uid://bpaqfx0kvqce5" path="res://cutscenes/cutscenes.tscn" id="4_nvajw"]
[ext_resource type="PackedScene" uid="uid://o5omgcwvfsaf" path="res://start_menu.tscn" id="5_3u2a5"]

[node name="Main" type="Node2D"]
script = ExtResource("1_qqd33")
game_state = 2

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="StaticBody2D"]
offset_left = 713.0
offset_top = 428.0
offset_right = 753.0
offset_bottom = 468.0

[node name="Map" parent="." instance=ExtResource("2_d4h1m")]

[node name="Player" parent="." instance=ExtResource("1_p6d36")]
z_index = -1
y_sort_enabled = true
position = Vector2(488, 403)
scale = Vector2(0.5, 0.5)

[node name="Cutscenes" parent="." instance=ExtResource("4_nvajw")]

[node name="StartMenu" parent="." instance=ExtResource("5_3u2a5")]

[node name="positionGetter" type="Marker2D" parent="."]
position = Vector2(682, -583)

[connection signal="end_cutscene" from="Cutscenes" to="." method="_on_cutscenes_end_cutscene"]
[connection signal="start_game" from="StartMenu" to="." method="_on_start_menu_start_game"]
